# questioning-machine

./: MANIFEST.in  README.md  pyproject.toml
src/machine_name/: __init__.py  cli.py  config.py  machina.yaml  machine.py
src/questioning_machine/: __init__.py  config.py  githf.py  machina.yaml  utilities.py
