[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "questioning-machine"
version = "0.0.3"
authors = [
    {name="Alexander Fedotov", email="alex.fedotov@aol.com"},
]
description = "Machine that asks questions."
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
]
dependencies = [
    "PyGithub >= 2.3.0",
    "PyYAML >= 6.0.1"
]
[project.urls]
"Homepage" = "https://github.com/questioning-machine/questioning-machine"
"Bug Tracker" = "https://github.com/questioning-machine/questioning-machine/issues"